// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factorial graph 1`] = `
<svg
  height={835.9999952316284}
  width={426.3333309491475}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="translate(-10 -20)"
  >
    <g
      transform="translate(22 37)"
    >
      <rect
        fillOpacity={0}
        height={801.9999952316284}
        stroke="#000"
        strokeDasharray="10 5"
        strokeOpacity={0.5}
        strokeWidth={1}
        transform="translate(0.5 0.5)"
        width={402.3333309491475}
      />
      <text
        alignmentBaseline="hanging"
        fill={null}
        fontFamily="sans-serif"
        fontSize={14}
        opacity={0.5}
        x={5}
        y={5}
      >
        main
      </text>
      <g>
        <path
          d="M 211.4999988079071 60 L 211.4999988079071 102.5 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(215.9999988079071 102.5) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 143.99999940395355 591.4999964237213 L 143.99999940395355 633.9999964237213 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(148.49999940395355 633.9999964237213) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 143.99999940395355 676.9999964237213 L 143.99999940395355 736.9999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(148.49999940395355 736.9999952316284) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 377.8333309491475 -2.5 L 377.8333309491475 711.9999958276749 L 160.6666660706202 711.9999958276749 L 160.6666660706202 736.9999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(165.1666660706202 736.9999952316284) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 152.33333273728687 779.9999952316284 L 152.33333273728687 794.4999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(156.83333273728687 794.4999952316284) rotate(90) scale(3)"
        />
      </g>
      <rect
        fill="white"
        height={5}
        stroke="#000"
        width={5}
        x={375.3333309491475}
        y={-5}
      />
      <rect
        fill="black"
        height={5}
        stroke="#000"
        width={5}
        x={149.83333273728687}
        y={801.9999952316284}
      />
      <g
        transform="translate(129.83333273728687 751.9999952316284)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={45}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={22.5}
          y={11.5}
        >
          print
        </text>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={11.666666666666671}
          y={-5}
        />
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={28.333333333333336}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={20}
          y={23}
        />
      </g>
      <g
        transform="translate(113.99999940395355 648.9999964237213)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={60}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={30}
          y={11.5}
        >
          numToStr
        </text>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={27.5}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={27.5}
          y={23}
        />
      </g>
      <g
        transform="translate(178.9999988079071 32)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={65}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={32.5}
          y={11.5}
        >
          std/const
        </text>
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={30}
          y={23}
        />
      </g>
      <g
        transform="translate(22 115)"
      >
        <rect
          fillOpacity={0}
          height={473.9999964237213}
          stroke="#000"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={320.83333154519397}
        />
        <text
          alignmentBaseline="hanging"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          fac
        </text>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 94.99999940395355 L 133.66666607062024 94.99999940395355 L 133.66666607062024 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(138.16666607062024 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 110.3333327372869 60 L 110.3333327372869 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(114.8333327372869 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 121.99999940395355 162.9999988079071 L 121.99999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(126.49999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 54.5 348.9999976158142 L 54.5 383.99999701976776 L 113.24999940395355 383.99999701976776 L 113.24999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(117.74999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 305.9999976158142 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(193.9999988079071 305.9999976158142) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 94.99999940395355 L 244.6666648785273 94.99999940395355 L 244.6666648785273 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(249.1666648785273 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 266.33333154519397 60 L 266.33333154519397 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(270.83333154519397 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 255.49999821186066 162.9999988079071 L 255.49999821186066 202.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(259.99999821186066 202.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 255.49999821186066 245.9999988079071 L 255.49999821186066 280.99999821186066 L 219.4999988079071 280.99999821186066 L 219.4999988079071 305.9999976158142 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(223.9999988079071 305.9999976158142) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 204.4999988079071 348.9999976158142 L 204.4999988079071 383.99999701976776 L 130.74999940395355 383.99999701976776 L 130.74999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(135.24999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 121.99999940395355 451.9999964237213 L 121.99999940395355 466.4999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(126.49999940395355 466.4999964237213) rotate(90) scale(3)"
          />
        </g>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={186.9999988079071}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={119.49999940395355}
          y={473.9999964237213}
        />
        <g
          transform="translate(106.99999940395355 423.9999964237213)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={30}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={15}
            y={11.5}
          >
            if
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={3.75}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={21.25}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={23}
          />
        </g>
        <g
          transform="translate(89.49999940395355 134.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            math/less
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={41.66666666666667}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={18.33333333333334}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(77.8333327372869 32)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(22 320.9999976158142)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(161.9999988079071 320.9999976158142)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={85}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={42.5}
            y={11.5}
          >
            math/multiply
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={25}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={55}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={40}
            y={23}
          />
        </g>
        <g
          transform="translate(237.99999821186066 217.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={35}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={17.5}
            y={11.5}
          >
            fac
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={15}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={15}
            y={23}
          />
        </g>
        <g
          transform="translate(225.49999821186066 134.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={60}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={30}
            y={11.5}
          >
            math/add
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={16.66666666666666}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={38.33333333333333}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={23}
          />
        </g>
        <g
          transform="translate(233.83333154519397 32)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`factorial with highlighted nodes 1`] = `
<svg
  height={835.9999952316284}
  width={426.3333309491475}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="translate(-10 -20)"
  >
    <g
      transform="translate(22 37)"
    >
      <rect
        fillOpacity={0}
        height={801.9999952316284}
        stroke="#000"
        strokeDasharray="10 5"
        strokeOpacity={0.5}
        strokeWidth={1}
        transform="translate(0.5 0.5)"
        width={402.3333309491475}
      />
      <text
        alignmentBaseline="hanging"
        fill={null}
        fontFamily="sans-serif"
        fontSize={14}
        opacity={0.5}
        x={5}
        y={5}
      >
        main
      </text>
      <g>
        <path
          d="M 211.4999988079071 60 L 211.4999988079071 102.5 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(215.9999988079071 102.5) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 143.99999940395355 591.4999964237213 L 143.99999940395355 633.9999964237213 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(148.49999940395355 633.9999964237213) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 143.99999940395355 676.9999964237213 L 143.99999940395355 736.9999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(148.49999940395355 736.9999952316284) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 377.8333309491475 -2.5 L 377.8333309491475 711.9999958276749 L 160.6666660706202 711.9999958276749 L 160.6666660706202 736.9999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(165.1666660706202 736.9999952316284) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 152.33333273728687 779.9999952316284 L 152.33333273728687 794.4999952316284 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(156.83333273728687 794.4999952316284) rotate(90) scale(3)"
        />
      </g>
      <rect
        fill="white"
        height={5}
        stroke="#000"
        width={5}
        x={375.3333309491475}
        y={-5}
      />
      <rect
        fill="black"
        height={5}
        stroke="#000"
        width={5}
        x={149.83333273728687}
        y={801.9999952316284}
      />
      <g
        transform="translate(129.83333273728687 751.9999952316284)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={45}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={22.5}
          y={11.5}
        >
          print
        </text>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={11.666666666666671}
          y={-5}
        />
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={28.333333333333336}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={20}
          y={23}
        />
      </g>
      <g
        transform="translate(113.99999940395355 648.9999964237213)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={60}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={30}
          y={11.5}
        >
          numToStr
        </text>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={27.5}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={27.5}
          y={23}
        />
      </g>
      <g
        transform="translate(178.9999988079071 32)"
      >
        <rect
          fill="#fff"
          height={23}
          stroke="#000"
          strokeWidth={3}
          width={65}
        />
        <text
          alignmentBaseline="central"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          textAnchor="middle"
          x={32.5}
          y={11.5}
        >
          std/const
        </text>
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={30}
          y={23}
        />
      </g>
      <g
        transform="translate(22 115)"
      >
        <rect
          fillOpacity={0}
          height={473.9999964237213}
          stroke="red"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={320.83333154519397}
        />
        <text
          alignmentBaseline="hanging"
          fill="red"
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          fac
        </text>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 94.99999940395355 L 133.66666607062024 94.99999940395355 L 133.66666607062024 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(138.16666607062024 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 110.3333327372869 60 L 110.3333327372869 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(114.8333327372869 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 121.99999940395355 162.9999988079071 L 121.99999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(126.49999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 54.5 348.9999976158142 L 54.5 383.99999701976776 L 113.24999940395355 383.99999701976776 L 113.24999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(117.74999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 305.9999976158142 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(193.9999988079071 305.9999976158142) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 189.4999988079071 -2.5 L 189.4999988079071 94.99999940395355 L 244.6666648785273 94.99999940395355 L 244.6666648785273 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(249.1666648785273 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 266.33333154519397 60 L 266.33333154519397 119.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(270.83333154519397 119.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 255.49999821186066 162.9999988079071 L 255.49999821186066 202.9999988079071 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(259.99999821186066 202.9999988079071) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 255.49999821186066 245.9999988079071 L 255.49999821186066 280.99999821186066 L 219.4999988079071 280.99999821186066 L 219.4999988079071 305.9999976158142 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(223.9999988079071 305.9999976158142) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 204.4999988079071 348.9999976158142 L 204.4999988079071 383.99999701976776 L 130.74999940395355 383.99999701976776 L 130.74999940395355 408.9999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(135.24999940395355 408.9999964237213) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 121.99999940395355 451.9999964237213 L 121.99999940395355 466.4999964237213 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(126.49999940395355 466.4999964237213) rotate(90) scale(3)"
          />
        </g>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={186.9999988079071}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={119.49999940395355}
          y={473.9999964237213}
        />
        <g
          transform="translate(106.99999940395355 423.9999964237213)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={30}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={15}
            y={11.5}
          >
            if
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={3.75}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={21.25}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={12.5}
            y={23}
          />
        </g>
        <g
          transform="translate(89.49999940395355 134.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            math/less
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={41.66666666666667}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={18.33333333333334}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(77.8333327372869 32)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(22 320.9999976158142)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
        <g
          transform="translate(161.9999988079071 320.9999976158142)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={85}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={42.5}
            y={11.5}
          >
            math/multiply
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={25}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={55}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={40}
            y={23}
          />
        </g>
        <g
          transform="translate(237.99999821186066 217.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="red"
            strokeWidth={3}
            width={35}
          />
          <text
            alignmentBaseline="central"
            fill="red"
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={17.5}
            y={11.5}
          >
            fac
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={15}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={15}
            y={23}
          />
        </g>
        <g
          transform="translate(225.49999821186066 134.9999988079071)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={60}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={30}
            y={11.5}
          >
            math/add
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={16.66666666666666}
            y={-5}
          />
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={38.33333333333333}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={27.5}
            y={23}
          />
        </g>
        <g
          transform="translate(233.83333154519397 32)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={65}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={32.5}
            y={11.5}
          >
            std/const
          </text>
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={30}
            y={23}
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`multiple input ports to one output port 1`] = `
<svg
  height={244.9999988079071}
  width={157}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    transform="translate(-10 -20)"
  >
    <g
      transform="translate(22 32)"
    >
      <rect
        fillOpacity={0}
        height={220.9999988079071}
        stroke="#000"
        strokeDasharray="10 5"
        strokeOpacity={0.5}
        strokeWidth={1}
        transform="translate(0.5 0.5)"
        width={133}
      />
      <text
        alignmentBaseline="hanging"
        fill={null}
        fontFamily="sans-serif"
        fontSize={14}
        opacity={0.5}
        x={5}
        y={5}
      >
        #cj64v13mt0002baluv27c5a65
      </text>
      <g>
        <path
          d="M 76.5 104.4999988079071 L 76.5 32 L 46.5 32 L 46.5 94.4999988079071 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(51 94.4999988079071) rotate(90) scale(3)"
        />
      </g>
      <g>
        <path
          d="M 76.5 104.4999988079071 L 76.5 32 L 61.5 32 L 61.5 94.4999988079071 "
          fill="none"
          opacity={0.8}
          stroke="#333333"
          strokeWidth={3}
        />
        <path
          d="M0,0 L0,3 L3,1.5 L0,0"
          fill="#333333"
          opacity={0.8}
          strokeWidth={3}
          transform="translate(66 94.4999988079071) rotate(90) scale(3)"
        />
      </g>
      <g
        transform="translate(22 106.9999988079071)"
      >
        <rect
          fillOpacity={0}
          height={87}
          stroke="#000"
          strokeDasharray="10 5"
          strokeOpacity={0.5}
          strokeWidth={1}
          transform="translate(0.5 0.5)"
          width={89}
        />
        <text
          alignmentBaseline="hanging"
          fill={null}
          fontFamily="sans-serif"
          fontSize={14}
          opacity={0.5}
          x={5}
          y={5}
        >
          cc
        </text>
        <g>
          <path
            d="M 54.5 -2.5 L 54.5 22 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(59 22) rotate(90) scale(3)"
          />
        </g>
        <g>
          <path
            d="M 54.5 65 L 54.5 79.5 "
            fill="none"
            opacity={0.8}
            stroke="#333333"
            strokeWidth={3}
          />
          <path
            d="M0,0 L0,3 L3,1.5 L0,0"
            fill="#333333"
            opacity={0.8}
            strokeWidth={3}
            transform="translate(59 79.5) rotate(90) scale(3)"
          />
        </g>
        <rect
          fill="white"
          height={5}
          stroke="#000"
          width={5}
          x={52}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={22}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={37}
          y={-5}
        />
        <rect
          fill="black"
          height={5}
          stroke="#000"
          width={5}
          x={52}
          y={87}
        />
        <g
          transform="translate(42 37)"
        >
          <rect
            fill="#fff"
            height={23}
            stroke="#000"
            strokeWidth={3}
            width={25}
          />
          <text
            alignmentBaseline="central"
            fill={null}
            fontFamily="sans-serif"
            fontSize={14}
            textAnchor="middle"
            x={12.5}
            y={11.5}
          >
            a
          </text>
          <rect
            fill="white"
            height={5}
            stroke="#000"
            width={5}
            x={10}
            y={-5}
          />
          <rect
            fill="black"
            height={5}
            stroke="#000"
            width={5}
            x={10}
            y={23}
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;
